# keylight-commander

./: .eslintrc.cjs  README.md  biome.json  bun.lockb  components.json  index.html  license.md  package-lock.json  package.json  pnpm-lock.yaml  update.json  vite.config.ts
.github/workflows/: publish-prerelease.yml  publish-release.yml  publish-to-auto-release.yml  test-build-only.yml  test-on-pr.yml
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: KeylightEditModal.tsx  KeylightListItem.tsx  ManualAddModal.tsx  SettingsModal.tsx  keylightListItem.tsx  layout.tsx
src/components/ui/: button.tsx  form.tsx  slider.tsx  table.tsx  tooltip.tsx
src/lib/: getKeylightConfig.ts  getKeylightState.ts  putKeylightDisplayName.ts  putKeylightState.ts  scan.ts  types.ts  useGlobalState.ts  useKeylight.ts  useKeylights.ts  useSettings.ts
src/lib/fetchers/: keylightStatus.get.ts  keylightStatus.put.ts
src/lib/hooks/: useKeylight.ts  useKeylights.ts  useServiceStore.ts  useSettingsStore.ts
src/routes/: __root.tsx  index.tsx  keylight.$hostname.tsx  settings.tsx
