[package]
name = "keylight-commander"
version = "0.1.0"
description = "Open source app for controlling Elgato Key Lights"
authors = ["David Chalifoux"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-skip-taskbar",
    "updater",
    "window-start-dragging",
    "window-minimize",
    "window-hide",
    "window-unmaximize",
    "window-show",
    "window-close",
    "window-maximize",
    "window-unminimize",
    "http-all",
    "system-tray",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mdns-sd = "0.10.3"
flume = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
