[package]
name = "keylight-commander"
version = "0.1.0"
description = "Cross-platform application for controlling Elgato Key Lights."
authors = ["David Chalifoux"]
edition = "2021"
license = "MIT"
repository = "https://github.com/davidchalifoux/keylight-commander"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "devtools",
    "image-png",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.13.2"
flume = "0.11.1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
